--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Alejandro Cerro",
   "license": "MIT",
   "dependencies": {
-    "colors": "^1.0.3"
+    "colors": "^1.0.3",
+    "mongoose": "^4.0.1"
   }
 }
