--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Alejandro Cerro",
   "license": "MIT",
   "dependencies": {
-    "colors": "^1.0.3",
-    "mongoose": "^4.0.1"
+    "colors": "1.0.3",
+    "mongoose": "3.8.11"
   }
 }
