--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Alejandro Cerro",
   "license": "MIT",
   "dependencies": {
+    "async": "0.9.0",
     "colors": "1.0.3",
-    "mongoose": "3.8.11"
+    "mongoose": "3.8.11",
+    "mongoose-post-find": "0.0.2"
   }
 }
