--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "\"MEAN stack project following book from learnable.com\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "populate": "node ./bin/populate_db"
   },
   "author": "Alejandro Cerro",
   "license": "MIT",
